# opensource_slam_noted

./: README.md
LIO-SAM-noted/: CMakeLists.txt
LIO-SAM-noted/config/: params.yaml
LIO-SAM-noted/include/: utility.h
LIO-SAM-noted/launch/include/: module_navsat.launch
LIO-SAM-noted/launch/include/config/: rviz.rviz
LIO-SAM-noted/src/: featureExtraction.cpp  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
SC-LeGO-LOAM_noted/: .gitignore  README.md
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/: CMakeLists.txt
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/include/: map_loader.h  tictoc.h
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/include/lego_loam/: feature_association.h  image_projection.h  map_optmization.h  transform_fusion.h  utility.h
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/include/scan_context/: KDTreeVectorOfVectorsAdaptor.h  Scancontext.cpp  Scancontext.h  nanoflann.hpp
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/launch/: map_loader.launch  map_show.rviz  run.launch  test.rviz
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/map/: .4e48b91cb7e0470e9eea287cd5e79e9761e0cd3.cam  README.md  stamped_legoloam_map_estimate.txt
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/params/: lego.yaml
SC-LeGO-LOAM_noted/SC-LeGO-LOAM/LeGO-LOAM/src/: feature_association.cpp  image_projection.cpp  map_loader.cpp  map_optmization.cpp  transform_fusion.cpp
floam_noted/include/: lidar.h
floam_noted/launch/: floam.launch  floam_mapping.launch
floam_noted/rviz/: floam_mapping.rviz
floam_noted/src/: laserMappingClass.cpp  laserMappingNode.cpp  laserProcessingClass.cpp  laserProcessingNode.cpp  lidar.cpp  lidarOptimization.cpp  odomEstimationClass.cpp  odomEstimationNode.cpp
hdl_graph_slam-noted/: CMakeLists.txt  README.md
hdl_graph_slam-noted/apps/: hdl_graph_slam_nodelet.cpp  prefiltering_nodelet.cpp
hdl_graph_slam-noted/include/g2o/: edge_plane_identity.hpp  edge_plane_parallel.hpp  edge_plane_prior.hpp
hdl_graph_slam-noted/include/hdl_graph_slam/: graph_slam.hpp  keyframe.hpp
hdl_graph_slam-noted/src/g2o/: robust_kernel_io.cpp
hdl_graph_slam-noted/src/hdl_graph_slam/: information_matrix_calculator.cpp  keyframe.cpp  map_cloud_generator.cpp  registrations.cpp
